third_party/rust/cxx/v1/crate/tests/ui/extern_type_generic.rs
#[cxx::bridge]
mod ffi {
    extern "C++" {
        type Generic<T>;
    }
}

fn main() {}
